# vcv-rack-freedom-system

./: CLAUDE.md  PLUGINS.md  README.md  ROADMAP.md  architecture-updates-summary.md  cross-reference-map.md  implementation-summary-phase2.md  overview.md  phase-2-plan-updates.md  vcv-rack-2-development-guide.md
.claude/: CLAUDE.md  preferences-README.md  preferences.json  settings.json  system-config.json
.claude/agents/: dsp-agent.md  foundation-shell-agent.md  gui-agent.md  research-planning-agent.md  troubleshoot-agent.md  ui-design-agent.md  ui-finalization-agent.md  validation-agent.md  validator.md
.claude/commands/: add-critical-pattern.md  continue.md  implement.md  install-plugin.md  plan.md  show-standalone.md  test.md
.claude/hooks/: PostToolUse.sh  SessionStart.sh  SubagentStop.sh  hooks.json
.claude/hooks/validators/: contract_validator.py  validate-checksums.py  validate-cross-contract.py  validate-dsp-components.py  validate-foundation.py  validate-gui-bindings.py  validate-parameters.py
.claude/schemas/: validator-report.json
.claude/skills/build-automation/: SKILL.md
.claude/skills/context-resume/: SKILL.md
.claude/skills/design-sync/: SKILL.md
.claude/skills/plugin-improve/: SKILL.md
.claude/skills/plugin-lifecycle/: SKILL.md
.claude/skills/plugin-planning/: SKILL.md
.claude/utils/: sync-brief-from-mockup.sh
architecture/: 00-PHILOSOPHY.md  01-executive-summary.md  02-core-abstractions.md  03-model-selection-extended-thinking-strategy.md  04-component-architecture.md  05-routing-architecture.md  06-state-architecture.md  07-communication-architecture.md  08-data-flow-diagrams.md  09-file-system-design.md  10-extension-architecture.md  11-build-automation-architecture.md  12-webview-integration-design.md  13-error-handling-recovery.md  14-design-decisions.md  15-migration-notes.md  16-implementation-roadmap.md  17-testing-strategy.md  FINAL-AUDIT-REPORT.md  README.md
plan/: phase-2-plan.md
plugins/AngelGrain/: .continue-here.md  CMakeLists.txt  Makefile  plugin.dylib  plugin.json
plugins/AngelGrain/.ideas/: parameter-spec.md
plugins/AngelGrain/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/AngelGrain/src/: AngelGrain.cpp  plugin.cpp  plugin.hpp
plugins/AutoClip/: CMakeLists.txt  Makefile  NOTES.md  plugin.dylib  plugin.json
plugins/AutoClip/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml
plugins/AutoClip/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/AutoClip/src/: AutoClip.cpp  plugin.cpp  plugin.hpp
plugins/ClapMachine/: NOTES.md
plugins/DriveVerb/: Makefile  NOTES.md  plugin.dylib  plugin.json
plugins/Drum808/: .continue-here.md  Makefile  NOTES.md  plugin.dylib  plugin.json
plugins/DrumRoulette/: .continue-here.md  Makefile  NOTES.md  plugin.dylib  plugin.json
plugins/FlutterVerb/: Makefile  NOTES.md  plugin.dylib  plugin.json
plugins/GainKnob/: .continue-here.md  Makefile  NOTES.md  plugin.dylib  plugin.json
plugins/Genesis/: .continue-here.md  Makefile  NOTES.md  plugin.dylib  plugin.json
plugins/LushPad/: .continue-here.md  CMakeLists.txt  Makefile  plugin.dylib  plugin.json
plugins/LushVerb/: .continue-here.md  NOTES.md
plugins/MinimalKick/: .continue-here.md  CMakeLists.txt  Makefile  NOTES.md  plugin.dylib  plugin.json
plugins/MinimalKick/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml
plugins/MinimalKick/Source/: PluginEditor.cpp  PluginEditor.h
plugins/MinimalKick/src/: MinimalKick.cpp  plugin.cpp  plugin.hpp
plugins/OrganicHats/: Makefile  NOTES.md  plugin.dylib  plugin.json
plugins/PadForge/: .continue-here.md
plugins/Scatter/: .continue-here.md  Makefile  NOTES.md  plugin.dylib  plugin.json
plugins/TapeAge/: .continue-here.md  CHANGELOG.md  Makefile  NOTES.md  plugin.dylib  plugin.json
plugins/Words/: .continue-here.md
procedures/agents/: troubleshooter.md
procedures/commands/: continue.md  doc-fix.md  dream.md  implement.md  improve.md  install-plugin.md  show-standalone.md  test.md  troubleshoot-juce.md
procedures/core/: checkpoint-system.md  interactive-decision-system.md
procedures/examples/: plugin-ideation.md  plugin-improve.md
procedures/scripts/: build-and-install.md
procedures/skills/: build-automation.md  context-resume.md  deep-research.md  design-sync.md  juce-foundation.md  plugin-ideation.md  plugin-improve.md  plugin-lifecycle.md  plugin-testing.md  plugin-workflow.md  troubleshooting-docs.md  ui-mockup.md  ui-template-library.md
procedures/webview/: 01-overview.md  02-project-setup.md  03-communication-patterns.md  04-parameter-binding.md  05-audio-visualization.md  06-development-workflow.md  07-distribution.md  EXAMPLES-GUIDE.md  QUICK-REFERENCE.md  README.md  best-practices.md  common-problems.md
procedures/webview/examples/starter-template/: CMakeLists.txt  README.md
procedures/webview/examples/starter-template/cmake/: CPM.cmake
procedures/webview/examples/starter-template/include/: ParameterIDs.h  PluginEditor.h  PluginProcessor.h
procedures/webview/examples/starter-template/source/: PluginEditor.cpp  PluginProcessor.cpp
procedures/webview/examples/starter-template/ui/public/: index.html
procedures/webview/examples/starter-template/ui/public/js/: index.js
prompts/: 001-analyze-architecture-inconsistencies.md  001-mac-setup-wizard.md  002-architecture-final-audit.md  002-migrate-plugin-structure.md  003-analyze-architecture-procedure-mapping.md  003-create-plugin-planning-skill.md  004-implement-architecture-cross-references.md  004-refactor-plugin-workflow-skill.md  005-update-claude-md-protocols.md  006-create-plan-slash-command.md  007-update-implement-command.md
scripts/: build-and-install.sh  verify-backup.sh
troubleshooting/gui-issues/: toggle-switch-wrong-api-getsliderstate-flutterverb-20251111.md  vu-meter-no-animation-loop-flutterverb-20251111.md  webview-frame-load-interrupted-TapeAge-20251111.md
troubleshooting/patterns/: HOW-TO-ADD-CRITICAL-PATTERNS.md  README.md  juce8-critical-patterns.md  vcv-rack-critical-patterns.md
(+126 files in other folders)
